gcc/testsuite/rust/rustc/ui/resolve/resolve-conflict-extern-crate-vs-extern-crate.rs
extern crate std;
// { dg-error "" "" { target *-*-* } .-1 }

fn main(){}

